package exp10;
//@Author：ranxing
//@Time：2022/11/3   9:53
//@File：Book.java

public interface Book {
    public void discount();
}
